Add skeleton plotting functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,12 @@
 Package: packEJ
-Title: Eachan Johnson's Personal R Package
-Version: 0.0.0.9000
-Authors@R: 
-    person(given = "Eachan",
-           family = "Johnson",
-           role = c("aut", "cre"),
-           email = "eachab.johnson@gmail.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Eachan Johnson's personal R package
-License: MIT
+Type: Package
+Title: What the Package Does (Title Case)
+Version: 0.1.0
+Author: Who wrote it
+Maintainer: The package maintainer <yourself@somewhere.net>
+Description: More about what it does (maybe more than one line)
+    Use four spaces when indenting paragraphs within the Description.
+License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
