Add pivot_wide and subset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(pivot_long,matrix)
 S3method(pivot_wide,data.frame)
 S3method(plot_dose_response,data.frame)
 S3method(print,matricks)
+S3method(subset,matricks)
 export("%:%")
 export("%?%")
 export("%or%")
