--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ S3method(as_df,logical)
 S3method(as_df,matrix)
 S3method(as_df,numeric)
 S3method(capitalize,character)
-S3method(heat_map,Matricks)
 S3method(heat_map,data.frame)
+S3method(heat_map,matricks)
 S3method(heat_map,matrix)
 S3method(join,character)
 S3method(join,numeric)
