Add diffusion functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,12 +24,22 @@ export("%:%")
 export("%?%")
 export("%or%")
 export(Matricks)
+export(adaptive_gkernel)
+export(affinity)
 export(capitalise)
 export(colorscheme)
 export(expo_log10)
+export(get_k_nn_dist)
+export(gkernel)
 export(heat_map)
 export(log_plot)
+export(make_transition_matrix)
+export(map_cols)
+export(pivot_long)
+export(pivot_wide)
 export(plot_dose_response)
 export(println)
+export(row_normalize)
 export(set_theme)
+export(symmetrize)
 importFrom(dplyr,"%>%")
